--- a/site/style/input.less
+++ b/site/style/input.less
@@ -132,8 +132,7 @@ justify-content: center;
 float: left;
 position: relative;
 height: 100%;
-}
-#tattoo li a {
+a {
 display: block;
 padding: 6px;
 width: 100px;
@@ -142,6 +141,8 @@ font-family: Courier New;
 text-decoration: none;
 text-align: center;
 }
+}
+
 #tattoo ul li { float: none; }
 #tattoo li:hover { background-color:  #aa0d0d; }
 #tattoo ul li:hover { background-color: rgba(255, 255, 255,0.4); }
